# AMP_ASSv4

./: .gitignore  JETSON_SETUP.md  README.md
src/amp_lane/: README.md  package.xml  setup.cfg  setup.py
src/amp_lane/amp_lane/: infer.py  lane_follower.py
src/amp_lane/amp_lane/configs/: culane_res18.py
src/amp_lane/amp_lane/model/: backbone.py  model_culane.py  model_curvelanes.py  seg_model.py
src/amp_lane/amp_lane/nanosam/: infer.py  model.py
src/amp_lane/amp_lane/ultra_fast_lane/: infer.py
src/amp_lane/amp_lane/ultra_fast_lane/model/: model_culane.py  model_curvelanes.py  seg_model.py
src/amp_lane/amp_lane/ultra_fast_lane/utils/: common.py  factory.py
src/amp_lane/amp_lane/utils/: common.py  factory.py
src/amp_lane/launch/: launch.py
src/amp_lane_det/: package.xml  setup.cfg  setup.py
src/amp_simulate/: CHANGELOG.rst  README.md  package.xml  setup.cfg  setup.py
src/amp_simulate/amp_simulate/: kart_driver.py
src/amp_simulate/launch/: robot_launch.py
src/amp_simulate/resource/: tesla_webots.urdf
src/amp_simulate/worlds/protos/: Track.proto
src/amp_simulator/: CHANGELOG.rst  README.md  package.xml  setup.cfg  setup.py
src/amp_simulator/launch/: robot_launch.py
src/amp_simulator/resource/: tesla_webots.urdf
src/amp_simulator/worlds/: .track.wbproj  Track.wbt  TrackUnscaled.wbts  scale_world.py  tesla_world.wbt  track.wbt
src/odom_bringup/: package.xml  setup.cfg  setup.py
src/odom_bringup/config/: show_all.rviz.yaml
src/odom_bringup/launch/: odom_spinup.launch.py
src/rf2o_laser_odometry/: CMakeLists.txt
src/rf2o_laser_odometry/launch/: rf2o_laser_odometry.launch.py
