<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>odom_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="parallels@todo.todo">parallels</maintainer>
  <license>TODO: License declaration</license>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
